objects/SMAX_PS_ComplaintTask__c.object
<CustomObject>
    <description>Complaint Task</description>
    <label>Complaint Task</label>
    <nameField>
        <displayFormat>CTN-{0000000000}</displayFormat>
        <label>Complaint Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_LongText__c</fullName>
        <label>Long Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TaskCode__c</fullName>
        <description>Task Code</description>
        <inlineHelpText>Task Code</inlineHelpText>
        <label>Task Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TaskText__c</fullName>
        <description>Task Text</description>
        <inlineHelpText>Task Text</inlineHelpText>
        <label>Task Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Complaint__c</fullName>
        <description>Complaint Name</description>
        <inlineHelpText>Complaint Name</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>SMAX_PS_Complaint__c</referenceTo>
        <relationshipLabel>Complaint Tasks</relationshipLabel>
        <relationshipName>Complaint_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TaskGroup__c</fullName>
        <description>Task Group</description>
        <inlineHelpText>Task Group</inlineHelpText>
        <label>Task Group</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <description>Last Transaction Number</description>
        <inlineHelpText>Last Transaction Number</inlineHelpText>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletedBy__c</fullName>
        <description>Completed By Username</description>
        <inlineHelpText>Completed By Username</inlineHelpText>
        <label>Completed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletionTime__c</fullName>
        <description>Completion Time</description>
        <inlineHelpText>Completion Time</inlineHelpText>
        <label>Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UserResponsible__c</fullName>
        <description>User Responsible</description>
        <inlineHelpText>User Responsible</inlineHelpText>
        <label>User Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>